2015-06-12  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18522]
	* misc/efgcvt_r.c
	[LONG_DOUBLE_COMPAT (libc, GLIBC_2_0) && !LONG_DOUBLE_CVT]
	(cvt_symbol): Use weak_alias instead of strong_alias.
	[LONG_DOUBLE_COMPAT (libc, GLIBC_2_0)] (cvt_symbol): Likewise.
	* conform/Makefile (test-xfail-XPG4/stdlib.h/linknamespace):
	Remove variable.
	(test-xfail-UNIX98/stdlib.h/linknamespace): Likewise.
	(test-xfail-XOPEN2K/stdlib.h/linknamespace): Likewise.

	[BZ #18520]
	* inet/herrno.c (h_errno): Rename to __h_errno.
	(__libc_h_errno): Define as alias of __h_errno not h_errno.
	* include/netdb.h [IS_IN_LIB && !IS_IN (libc)] (h_errno): Define
	to __h_errno instead of h_errno.
	* nptl/herrno.c (h_errno): Rename to __h_errno.
	(__h_errno_location): Refer to __h_errno not h_errno.
	* resolv/Versions (h_errno): Rename to __h_errno.
	* conform/Makefile (test-xfail-XOPEN2K8/grp.h/linknamespace):
	Remove variable.
	(test-xfail-XOPEN2K8/pwd.h/linknamespace): Likewise.

2015-06-11  Andrew Senkevich  <andrew.senkevich@intel.com>

	* configure.ac: More strict check for AVX512 assembler support.
	* configure: Regenerated.

	* bits/libm-simd-decl-stubs.h: Added stubs for sin.
	* math/bits/mathcalls.h: Added sin declaration with __MATHCALL_VEC.
	* sysdeps/unix/sysv/linux/x86_64/libmvec.abilist: New versions added.
	* sysdeps/x86/fpu/bits/math-vector.h: SIMD declaration for sin.
	* sysdeps/x86_64/fpu/Makefile (libmvec-support): Added new files.
	* sysdeps/x86_64/fpu/Versions: New versions added.
	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.
	* sysdeps/x86_64/fpu/multiarch/Makefile (libmvec-sysdep_routines): Added
	build of SSE, AVX2 and AVX512 IFUNC versions.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin2_core.S: New file.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin2_core_sse4.S: New file.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin4_core.S: New file.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin4_core_avx2.S: New file.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin8_core.S: New file.